#178 - Updated with the latest changes from master, removed a redundant intermediate list.