@@ -288,9 +288,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <!--Extra memory to prevent jvm crash during heavy Integration/unit test-->
-          <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
-          <!-- Exclude certain dependencies causing related transitive issues.-->
           <classpathDependencyExcludes>
             <classpathDependencyExclude>org.springframework.cloud:spring-cloud-context</classpathDependencyExclude>
           </classpathDependencyExcludes>
